# hello-1.0.0

./: CMakeLists.txt  LICENSE  README.md  main.c
debian/: changelog  control  copyright  hello1.install  rules
include/:  btree.h  linkedlist.h  queue.h  stack.h
src/: linkedlist.c  queue.c  stack.c
